2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/globalstrings.h (glade_aboutdialog_filename): Remove
	leftover string constant.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* COPYING: Update to latest version shipped with Automake.
	* INSTALL: Likewise.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/mainwindow.{cc,h} (MainWindow::on_about): Replace custom
	about dialog with stock GTK+ one.
	(on_about_dialog_response): Rename from on_about_dialog_hide().
	Add unused function parameter for the response ID.
	* src/aboutdialog.{cc,h}: Remove now superfluous files.
	* ui/aboutdialog.glade: Likewise.

	* Makefile.am (src_regexxer_SOURCES): Remove src/aboutdialog.{cc,h}
	from the list of source files.
	(dist_pkgdata_DATA): Remove ui/aboutdialog.glade from list.
	* configure.ac (REGEXXER_MODULES): Require gtkmm 2.6, in which the
	stock about dialog first appeared.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* NEWS: Update.
	* README: Minor reformatting.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/miscutils.cc: Remove file, as it was essentially empty
	except for including miscutils.h.
	* Makefile.am (src_regexxer_SOURCES): Remove src/miscutils.cc.

2007-01-06  Daniel Elstner  <daniel.kitta@gmail.com>

	* src/*.{cc,h}: Update copyright notice:  The postal address of
	the Free Software Foundation changed, and my email address too.
	Also, remove the statement I had inserted which explicitely
	disallowed using a later version of the license.  I think I do
	not have to ask for permission from contributors, since the
	copyright notice only mentions me as the copyright holder, so
	technically everyone automatically transferred her copyright
	to me.  Anyway, the change is utterly minor and the notice now
	matches what everyone else is using.
	Also use the opportunity to get rid of the version control
	substitutions and the trailing empty line in every file.
	* ui/aboutdialog.glade: Update my email address.
